[project]
name = "prpy"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "rsimd", email = "rickysimd@gmail.com" }
]
dependencies = [
    "numpy>=1.26.4",
    "scipy>=1.10.1",
    "pandas>=2.0.3",
    "matplotlib>=3.8.4",
    "plotly>=5.21.0",
    "tqdm>=4.65.0",
    "seaborn>=0.13.2",
    "ipykernel>=6.24.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "opencv-python>=4.8.0.74",
    "Pillow>=10.0.0",
    "sphinx-proof>=0.1.3",
    "jupytext>=1.16.1",
    "matplotlib-fontja>=1.0.0",
    "jupyter-book>=1.0.0",
    "ghp-import>=2.1.0",
    "statsmodels>=0.14.2",
    "skorch>=0.15.0",
    "janome>=0.5.0",
    "nbqa>=1.8.5",
    "Cython>=3.0.10",
    "ffmpeg-python>=0.2.0",
    "palmerpenguins>=0.1.4",
    "torchvision>=0.18.0",
    "cufflinks>=0.17.3",
    "umap-learn>=0.5.6",
    "ml-dtypes==0.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.4.2",
    "mypy>=1.10.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/prpy"]
